# project_learn_LLM

./: .gitignore  EBM_Basics_and_Visualization.ipynb  README.md  environment.yml  learn-t2ebm.ipynb  llm_xai_ebm_example.ipynb  pyproject.toml  requirements.txt
talk2ebm/: learn-t2ebm.ipynb  main.py  pyproject.toml
visiontransformer/: learning_visiontransformer.ipynb  vision_transformer.ipynb
