[project]
name = "learn-t2ebm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "t2ebm>=0.1.2",
    "torch>=2.6.0",
]

